k8s/yaml/nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    name: nginx
