k8s/yaml/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-service
  #namespace: nginx
  namespace: lyx-prj-jnrpm7np

spec:
  type: NodePort
  ports:
  - port: 9000
    name: nginx-service80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
