k8s/yaml/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
 - host: nginx.k8s
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
          name: nginx-service
          port:
            number: 9000
